--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "app"
   ],
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "symfony",
+    "angularjs"
   ],
   "dependencies": {
     "yeoman-generator": "^0.19.0",
