--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -7,8 +7,11 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "load-grunt-tasks": "~3.1.0",
+    "grunt-contrib-connect": "~0.9.0",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.0",
+    "grunt-php": "~1.5.0",
     "bower": "~1.4.1"
   },
   "engines": {
