--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.0",
     "grunt-php": "~1.5.0",
+    "grunt-shell": "~1.1.2",
     "bower": "~1.4.1"
   },
   "engines": {
