--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -11,6 +11,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-sass": "~0.9.2",
     "grunt-php": "~1.5.0",
     "grunt-shell": "~1.1.2",
     "bower": "~1.4.1"
