--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-symfonangular",
   "version": "0.2.2",
-  "description": "Yeoman generator for Symfony + AngulaJS applications",
+  "description": "Yeoman generator for full stack development with (PHP) Symfony and (Javascript) AngularJS application",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "zguillez/generator-symfonangular",
