--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-symfonangular",
   "version": "0.3.4",
-  "description": "Yeoman generator for full stack development with (PHP) Symfony and (Javascript) AngularJS web application",
+  "description": "Full stack development with (PHP) Symfony and (Javascript) AngularJS application",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "zguillez/generator-symfonangular",
@@ -19,7 +19,10 @@
   "keywords": [
     "yeoman-generator",
     "symfony",
-    "angularjs"
+    "angularjs",
+    "php",
+    "javascript",
+    "webapp"
   ],
   "dependencies": {
     "yeoman-generator": "^0.19.0",
