--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-	"name": "generator-symfonangular",
-	"version": "2.2.13",
-	"description": "PHP Symfony 3 framework with Javascript AngularJS framework integration for full stack development.",
-	"license": "MIT",
-	"main": "app/index.js",
-	"repository": "zguillez/generator-symfonangular",
-	"author": {
-		"name": "Guillermo de la Iglesia",
-		"email": "mail@zguillez.io",
-		"url": "https://github.com/zguillez"
-	},
-	"scripts": {
-		"test": "mocha"
-	},
-	"files": [
-		"generators"
-	],
-	"keywords": [
-		"yeoman-generator",
-		"symfony",
-		"angularjs",
-		"php",
-		"javascript",
-		"webapp"
-	],
-	"dependencies": {
-		"yeoman-generator": "^0.22.5",
-		"chalk": "^1.1.3",
-		"yosay": "^1.1.1"
-	},
-	"devDependencies": {
-		"mocha": "*",
-		"grunt": "~1.0.1",
-		"load-grunt-tasks": "~3.5.0",
-		"grunt-contrib-connect": "~1.0.1",
-		"grunt-contrib-watch": "~1.0.0",
-		"grunt-contrib-clean": "~1.0.0",
-		"grunt-contrib-copy": "~1.0.0",
-		"grunt-contrib-uglify": "~1.0.1",
-		"grunt-contrib-sass": "~1.0.0",
-		"grunt-php": "~1.5.1",
-		"grunt-shell": "~1.2.1",
-		"bower": "~1.7.9"
-	}
+  "name": "generator-symfonangular",
+  "version": "2.2.13",
+  "description": "PHP Symfony 3 framework with Javascript AngularJS framework integration for full stack development.",
+  "license": "MIT",
+  "main": "app/index.js",
+  "repository": "zguillez/generator-symfonangular",
+  "author": {
+    "name": "Guillermo de la Iglesia",
+    "email": "mail@zguillez.io",
+    "url": "https://github.com/zguillez"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "files": [
+    "generators"
+  ],
+  "keywords": [
+    "yeoman-generator",
+    "symfony",
+    "angularjs",
+    "php",
+    "javascript",
+    "webapp"
+  ],
+  "dependencies": {
+    "yeoman-generator": "^0.22.5",
+    "chalk": "^1.1.3",
+    "yosay": "^1.1.1"
+  },
+  "devDependencies": {
+    "bower": "~1.7.9",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-connect": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-sass": "~1.0.0",
+    "grunt-contrib-uglify": "~1.0.1",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-php": "~1.5.1",
+    "grunt-shell": "~1.2.1",
+    "load-grunt-tasks": "~3.5.0",
+    "mocha": "*"
+  }
 }
