--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "generator-symfonangular",
-  "version": "2.2.15",
+  "version": "2.3.0",
   "description": "PHP Symfony 3 framework with Javascript AngularJS framework integration for full stack development.",
-  "license": "MIT",
-  "main": "app/index.js",
-  "repository": "zguillez/generator-symfonangular",
+  "homepage": "",
   "author": {
     "name": "Guillermo de la Iglesia",
     "email": "mail@zguillez.io",
     "url": "https://github.com/zguillez"
   },
-  "scripts": {
-    "test": "mocha"
-  },
   "files": [
     "generators"
   ],
+  "main": "generators/index.js",
   "keywords": [
     "yeoman-generator",
     "symfony",
@@ -25,12 +21,26 @@
     "webapp"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.23.3",
+    "yeoman-generator": "^0.22.0",
     "chalk": "^1.1.3",
     "yosay": "^1.1.1"
   },
   "devDependencies": {
-    "bower": "~1.7.9",
+    "yeoman-test": "^1.4.0",
+    "yeoman-assert": "^2.2.1",
+    "eslint": "^2.9.0",
+    "eslint-config-xo-space": "^0.13.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
+    "gulp-istanbul": "^0.10.4",
+    "gulp-mocha": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-nsp": "^2.4.1",
+    "gulp-coveralls": "^0.1.4",
+    "bower": "^1.7.9",
+    "connect-livereload": "^0.5.4",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-connect": "~1.0.2",
@@ -40,7 +50,18 @@
     "grunt-contrib-watch": "~1.0.0",
     "grunt-php": "~1.5.1",
     "grunt-shell": "~1.3.0",
-    "load-grunt-tasks": "~3.5.0",
-    "mocha": "*"
-  }
+    "load-grunt-tasks": "^3.5.0"
+  },
+  "eslintConfig": {
+    "extends": "xo-space",
+    "env": {
+      "mocha": true
+    }
+  },
+  "repository": "/zguillez/generator-base-backbone",
+  "scripts": {
+    "prepublish": "gulp prepublish",
+    "test": "gulp"
+  },
+  "license": "Apache-2.0"
 }
